# bf-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  benchmark_results.csv  benchmark_results.txt  brainfuck  main.cpp  readme.md
programs/: hello.b
samples/: cgbfi.b  cgbfi2.b  (+3 more)
src/benchmarks/: CMakeLists.txt  execute.cpp  execute.h  file.cpp  file.h  go.cpp  main.cpp  parse.cpp  parse.h  utils.cpp  utils.h
src/brainfuck/: CMakeLists.txt  debug.cpp  debug.h  error.h  execute.cpp  execute.h  file.cpp  file.h  format.cpp  format.h  go.cpp  go.h  hp.cpp  hp.h  instruction.cpp  instruction.h  libs.h  parse.cpp  parse.h  profile.cpp  profile.h  profile_macros.h  string.h  types.cpp  types.h
src/tests/: CMakeLists.txt  file.cpp  go.cpp  main.cpp  parse.cpp  pch.h  utils.cpp  utils.h
src/tests/snapshots/: file.mandelbrot.approved.txt  go.echo.approved.txt  main.file.read.approved.txt  parse.echo.approved.txt  parse.empty_file.approved.txt
src/tests/snapshots/go/: 392quine.b.expected.txt  bitwidth.b.expected.txt  dbfi.b.expected.txt  echo.b.RECEIVED.txt  echo.b.expected.txt  hello_world.b.expected.txt  life.b.expected.txt  mandelbrot.b.expected.txt  numwarp.b.expected.txt  rot13.b.expected.txt
src/tests/snapshots/go/tests/: complex_multiply_value_multi_output.b.expected.txt  complex_multiply_value_multi_output_spread.b.expected.txt  empty_file.b.expected.txt  loop_til_zero.b.expected.txt  no_loop_hello.b.expected.txt  transfer_value.b.expected.txt  transfer_value_with_extra.b.expected.txt
src/tests/snapshots/parse/: 392quine.b.expected.txt  bitwidth.b.expected.txt  dbfi.b.expected.txt  echo.b.expected.txt  hello_world.b.expected.txt  life.b.expected.txt  mandelbrot.b.expected.txt  numwarp.b.expected.txt  rot13.b.expected.txt
(+48 files in other folders)
